--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,4 @@ if (WIN32)
 	target_compile_options("${CMAKE_PROJECT_NAME}" PRIVATE /UUNICODE /U_UNICODE)
 endif()
 
-# target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC DBC_INCLUDE card deck)
-
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE ftxui card deck hand engine)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE card deck hand engine)
