--- a/src/card/CMakeLists.txt
+++ b/src/card/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(card INTERFACE)
 
 target_include_directories(card INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_link_libraries(card INTERFACE formatting)
