--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -86,6 +86,6 @@ jobs:
     - name: 'Upload Artifact'
       uses: actions/upload-artifact@v4
       with:
-        name: drunk-black-jack-${{ matrix.os }}-build
+        name: drunce-${{ matrix.os }}-${{ matrix.version }}
         path: ${{ steps.strings.outputs.build-output-dir }}/Release/*
         retention-days: 5
