new cleaned up version

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,4 @@
-add_subdirectory(card)
-add_subdirectory(generator)
-add_subdirectory(deck)
-add_subdirectory(hand)
-add_subdirectory(engine)
-add_subdirectory(ai)
+add_subdirectory(core)
 add_subdirectory(formatting)
 
 
@@ -13,4 +8,4 @@ if (WIN32)
 	target_compile_options("${CMAKE_PROJECT_NAME}" PRIVATE /UUNICODE /U_UNICODE)
 endif()
 
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE ai formatting card deck hand engine)
+target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC core_definitions engine deck_handler player ai_logic formatting)
