--- a/src/core/hand/CMakeLists.txt
+++ b/src/core/hand/CMakeLists.txt
@@ -2,4 +2,4 @@ add_library(hand STATIC hand.cpp)
 
 target_include_directories(hand PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(hand PUBLIC card)
+target_link_libraries(hand PUBLIC core_definitions card)
